--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "dev": "tsx watch src/index.ts",
     "postinstall": "prisma generate",
     "db:migrate": "prisma migrate deploy",
     "db:push": "prisma db push",
@@ -20,14 +20,15 @@
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.21",
     "nodemon": "^3.1.10",
-    "prisma": "^6.7.0",
+    "prisma": "^6.8.2",
     "rimraf": "^2.7.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.8.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
